@@ -56,6 +56,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- `preserve-rooms`: don't reserve a room for citizens that you expel from the fort
 
 ## Misc Improvements
 
